errorlogs/1516586273345-py2teeest.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
157 INFO: PyInstaller: 3.3.1
157 INFO: Python: 3.4.4
158 INFO: Platform: Windows-XP-5.1.2600-SP3
163 INFO: wrote Z:\p2e\py2teeest.spec
170 INFO: UPX is not available.
171 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
180 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516586273345', 'Z:\\p2e']
181 INFO: checking Analysis
181 INFO: Building Analysis because out00-Analysis.toc is non existent
181 INFO: Initializing module dependency graph...
191 INFO: Initializing module graph hooks...
195 INFO: Analyzing base_library.zip ...
8091 INFO: Processing pre-find module path hook   distutils
11824 INFO: running Analysis out00-Analysis.toc
12328 INFO: Caching module hooks...
12343 INFO: Analyzing Z:\p2e\workingdir\1516586273345\py2teeest.py

Syntax error in Z:\p2e\workingdir\1516586273345\py2teeest.py
  File "Z:\p2e\workingdir\1516586273345\py2teeest.py", line 1
     print "bro"
               ^
 SyntaxError: Missing parentheses in call to 'print'

